# VODHound

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application-gtk4/: CMakeLists.txt
application-gtk4/include/application/: fighter_icons.h  game_browser.h  game_list.h
application-gtk4/res/: vodhound.gresource.xml
application-gtk4/src/: fighter_icons.c  game_browser.c  game_list.c  main.c
application/include/application/: import.h
application/migrations/: 1-schema.down.sql  1-schema.up.sql
application/src/: main.c
application/src/import/: param_labels_csv.c  reframed.c  reframed_framedata_1_5.c  reframed_mapping_info.c  reframed_metadata.c  reframed_metadata_1_5.c  reframed_metadata_1_7.c  reframed_motion_labels.c  reframed_player_details.c  reframed_replay.c  reframed_videometadata.c  reframed_videometadata_1_0.c
cmake/modules/: FindGTK4.cmake
cmake/templates/: VODHoundConfig.cmake.in
iup3d/: CMakeLists.txt
iup3d/include/: iup3d.h
iup3d/src/: iup3d.def  iup_3dcanvas.c  iup_3dcanvas_glx.c  iup_3dcanvas_win32_dx11.c
iupgfx/: CMakeLists.txt
iupgfx/include/: iupgfx.h
iupgfx/src/: iup_gfxcanvas.c  iup_gfxcanvas_glx.c  iup_gfxcanvas_win32_dx11.c  iupgfx.def
iupgfx/src/gl/: api.c  api.h  shader.c  shader.h
plugins/: CMakeLists.txt
plugins/aitool/: CMakeLists.txt
plugins/aitool/src/: aidb.sqlgen  plugin_aitool.c
plugins/cmake/modules/: VODHoundPlugin.cmake
plugins/cmake/templates/: test_main.cpp.in
plugins/ffmpeg-video/: CMakeLists.txt
plugins/ffmpeg-video/src/: plugin.c
plugins/search/: CMakeLists.txt
plugins/search/include/search/: asm.h  ast.h  ast_ops.h  ast_post.h  dfa.h  frame_data.h  match.h  nfa.h  parser.h  range.h  search_index.h  state.h  symbol.h
plugins/search/src/: a.out  asm_x86_64.c  ast.c  ast_ops.c  ast_post.c  ast_post_dj.c  ast_post_fh.c  ast_post_fs.c  ast_post_idj.c  ast_post_patch_motions.c  ast_post_sh.c  cli.c  dfa.c  match.c  nfa.c  parser.c  parser.y  plugin_search.c  scanner.lex  search_index.c  x86_64.c
plugins/search/tests/: test_ast.cpp  test_eval.cpp
plugins/video-ffmpeg/: CMakeLists.txt
plugins/video-ffmpeg/include/video-ffmpeg/: canvas.h  decoder.h  gfx.h
plugins/video-ffmpeg/src/: canvas.c  canvas_glx.c  canvas_win32_dx.c  decoder.c  gfx_dx11.c  gfx_gl.c  plugin.c  plugin_video_ffmpeg.c
plugins/video-ffmpeg/src/win32/: canvas_win32.c  gfx_win32.c
plugins/vod-review/: CMakeLists.txt
plugins/vod-review/src/: plugin.c  plugin_vod_review.c
rf/: CMakeLists.txt
rf/include/rf/: backtrace.h  btree.h  db_ops.h  dynlib.h  hash.h  hm.h  init.h  log.h  mem.h  mfile.h  mstream.h  plugin.h  rb.h  str.h  utf8.h  vec.h
rf/migrations/: 1-schema.down.sql  1-schema.up.sql  1-static-tables.sql
rf/src/: btree.c  db_ops.c  hash.c  hm.c  init.c  log.c  mem.c  mstream.c  rb.c  str.c  vec.c
rf/src/platform/linux/: backtrace_linux.c  dynlib_linux.c  mfile_linux.c  utf8_linux.c
rf/src/platform/win32/: backtrace_win32.c  dynlib_win32.c  mfile_win32.c  utf8_win32.c
rf/templates/: config.h.in
scripts/: gen_rfr_import.py  valgrind-host.sh
sqlgen/: CMakeLists.txt  README.md
sqlgen/sqlgen/: sqlgen.c
sqlgen/src/: main.c  sqlgen.c
sqlgen/tests/: CMakeLists.txt  migrations.sqlgen  test_migrations.cpp
tests/: CMakeLists.txt
vh/: CMakeLists.txt
vh/include/vh/: backtrace.h  btree.h  crc32.h  db_ops.h  dynlib.h  frame_data.h  fs.h  hash.h  hash40.h  hm.h  import.h  init.h  log.h  mem.h  mfile.h  mstream.h  plugin.h  plugin_loader.h  plugin_manager.h  rb.h  str.h  table.h  thread.h  utf8.h  vec.h
vh/migrations/: 1-schema.down.sql  1-schema.up.sql  1-static-tables.sql
vh/src/: btree.c  crc32.c  db.sqlgen  db_ops.c  frame_data.c  fs_common.c  hash.c  hash40.c  hm.c  init.c  log.c  mem.c  mstream.c  plugin_loader.c  plugin_manager.c  rb.c  str.c  vec.c
vh/src/import/: param_labels_csv.c  reframed.c  reframed_add_person.c  reframed_framedata.c  reframed_framedata_1_5.c  reframed_mapping_info.c  reframed_metadata.c  reframed_metadata_1_5.c  reframed_metadata_1_6.c  reframed_metadata_1_7.c  reframed_motion_labels.c  reframed_player_details.c  reframed_replay.c  reframed_videometadata.c  reframed_videometadata_1_0.c
vh/src/linux/: dynlib_linux.c  fs_linux.c  mfile_linux.c  thread_linux.c  utf8_linux.c
vh/src/platform/linux/: dynlib_linux.c  fs_linux.c
vh/src/platform/win32/: dynlib_win32.c  fs_win32.c  utf8_win32.c
vh/src/win32/: backtrace_win32.c  dynlib_win32.c  fs_win32.c  mfile_win32.c  thread_win32.c  utf8_win32.c
vh/templates/: config.h.in
vh/tests/: env_vh_init.cpp  test_vh_db.cpp  test_vh_frame_data.cpp  test_vh_fs.cpp  test_vh_hm.cpp
